fix(transaction): add separate dto for get transaction by id api
